[package]
name = "env_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
name = "env_derive"

[dependencies]
darling = "0.13.0"
proc-macro-crate = "1.1.0"
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = { version = "1.0.82", features = ["full", "extra-traits"] }
